--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.kafka.local</groupId>
-  <artifactId>kafka-starter-confluent</artifactId>
+  <artifactId>kafka-ci-cd-pipeline</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
