--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,25 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    
+    uses: actions/setup-java@v1
       with:
         java-version: 11
+    
+        uses: docker/setup-buildx-action@v1
+      id: buildx
+      with:
+        install: true
+    
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    
+    - name: Bring up kafka environemnt with docker compose
+      uses: isbang/compose-action@v0.1
+      with:
+      compose-file: './docker/docker-compose.yml'
+    
+    - name: Test
+      run: |
+        sleep 120
+        docker ps
