--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    
+    - name: Set up Docker
       uses: docker/setup-buildx-action@v1
       id: buildx
       with:
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     
-    - name: Bring up kafka environemnt with docker compose
+    - name: Bring up kafka environemnt
       uses: isbang/compose-action@v0.1
       with:
       compose-file: './docker/docker-compose.yml'
