--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,9 @@ jobs:
     - name: Bring up kafka environemnt
       uses: isbang/compose-action@v0.1
       with:
-        compose-file: './docker/docker-compose.yml'
+        compose-file: 'docker/docker-compose.yml'
     
     - name: Test
       run: |
-        sleep 120
+        sleep 180
         docker ps
