--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,9 @@ jobs:
     - name: Install Kafka CLI
       run: |
         echo "A initial message"
-        curl "https://apache.mirror.digitalpacific.com.au/kafka/2.7.0/kafka_2.13-2.7.0.tgz" -o ~/Downloads/kafka.tgz
         mkdir ~/kafka && cd ~/kafka
-        tar -xvzf ~/Downloads/kafka.tgz --strip 1
+        curl -o kafka.tgz https://apache.mirror.digitalpacific.com.au/kafka/2.7.0/kafka_2.13-2.7.0.tgz
+        tar -xvzf kafka.tgz --strip 1
         bin/kafka-topics.sh --bootstrap-server localhost:29092 --list
     - run: echo "last message"
     - name: Test
