fixed test block in main.yaml v2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,5 @@ jobs:
     - name: Test
       run: |
         docker ps
+        cd ~/kafka
         bin/kafka-topics.sh --bootstrap-server localhost:29092 --list
