--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,10 @@ jobs:
     - name: Test
       run: |
         docker ps
+        pwd
         cd ~/kafka/bin
+        pwd
+        ls -l
         kafka-topics.sh --bootstrap-server localhost:29092 --list
         kafka-topics.sh --bootstrap-server localhost:29092 --delete --topic users
         kafka-topics.sh --bootstrap-server localhost:29092 --create --topic users --partitions 3 --replication-factor 1
