--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,14 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Set up Docker
+    - name: Set up Dockergit
       uses: docker/setup-buildx-action@v1
       id: buildx
       with:
         install: true
     
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean package --file pom.xml -DskipTests 
 
     - name: Bring up kafka environemnt
       uses: isbang/compose-action@v0.1
